WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
184877
[Win][WK2] REGRESSION(
r230834
) 'getpid': identifier not found
https://bugs.webkit.org/show_bug.cgi?id=184877
Summary
[Win][WK2] REGRESSION(r230834) 'getpid': identifier not found
Fujii Hironori
Reported
2018-04-22 23:42:32 PDT
REGRESSION(
r230834
) 'getpid': identifier not found I'm maintaining WebKit2 for Windows locally. It can't compile after
Bug 184793
.
Attachments
Patch
(3.15 KB, patch)
2018-04-22 23:56 PDT
,
Fujii Hironori
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-04-22 23:56:05 PDT
Created
attachment 338571
[details]
Patch
Yusuke Suzuki
Comment 2
2018-04-23 01:29:44 PDT
Comment on
attachment 338571
[details]
Patch r=me
Fujii Hironori
Comment 3
2018-04-23 03:13:27 PDT
Committed
r230908
: <
https://trac.webkit.org/changeset/230908
>
Radar WebKit Bug Importer
Comment 4
2018-04-23 03:14:48 PDT
<
rdar://problem/39641718
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug