[Win][WK2] REGRESSION(r230834) 'getpid': identifier not found https://bugs.webkit.org/show_bug.cgi?id=184877

Reviewed by Yusuke Suzuki.

* WebProcess/WebPage/WebBackForwardListProxy.cpp:
(WebKit::WebBackForwardListProxy::addItem): Use WTF::getCurrentProcessID() instead of getpid().
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::goToBackForwardItem): Ditto.

Canonical link: https://commits.webkit.org/200384@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@230908 268f45cc-cd09-0410-ab3c-d52691b4dbfc